--- a/data/v2rayse-live.yaml
+++ b/data/v2rayse-live.yaml
@@ -1,11 +1,10 @@
 ####################################
 # 创建者：v2rayse.com
-# 客户端：Clash.Meta
-# 创建时间：2023-10-03 15:47:16
+# 客户端：Clash
+# 创建时间：2023-10-04 09:22:52
 # 使用模版：V2RaySE 默认模版
 # 节点数量：10
 ####################################
-# !!当前配置文件请使用基于 Clash.Meta 内核程序
 mixed-port: 7890
 allow-lan: true
 log-level: info
@@ -86,109 +85,109 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"5.161.58.40","port":2083,"cipher":"auto","uuid":"47b93627-da5f-4f2a-bcd6-f44ac26b90c4","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
-  - {"name":"🇳🇱_NL_荷兰->🇫🇷_FR_法国","type":"vless","server":"188.114.96.125","port":2096,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/https://zipoapps.com/digitalclock/privacy/tabrizm137/diamond_tm/diamond_tm/mdiamond_tm/diamond_tm/diamond_tm.net"}}
-  - {"name":"🇩🇪_DE_德国","type":"vmess","server":"94.130.24.110","port":2083,"cipher":"auto","uuid":"90e968f5-58a5-42ce-a2de-c81894054563","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
-  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"5.161.66.221","port":2083,"cipher":"auto","uuid":"47b93627-da5f-4f2a-bcd6-f44ac26b90c4","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"mm3.shabijichang.com","port":80,"cipher":"auto","uuid":"53701585-591f-48a3-9515-8831ed0524ac","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"mm3.shabijichang.com"}}}
-  - {"name":"🇳🇱_NL_荷兰->🇬🇧_GB_英国","type":"vless","server":"188.114.96.21","port":443,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/@azarbayjab1/https://octohide.com/routertabrizm137.com/diamond_tm/t.me/azarbayjab1"}}
-  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"5.161.220.124","port":2083,"cipher":"auto","uuid":"47b93627-da5f-4f2a-bcd6-f44ac26b90c4","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
+  - {"name":"🇨🇳_CN_中国_1","type":"ss","server":"as.al19.cf","port":42018,"password":"977a1372-18fe-4bae-8616-9a59497b810a","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"🇨🇳_CN_中国->🇺🇸_US_美国_1","type":"vmess","server":"mf34fx.micloud.buzz","port":46034,"cipher":"auto","uuid":"81fbdd06-6aa2-42f7-b71a-2f71253d8bd3","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/zh-cn","headers":{"host":"mf34fx.micloud.buzz"}}}
+  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"ns1.v2-vip.fun","port":80,"cipher":"auto","uuid":"bffa23aa-ae0a-4c02-af77-2a14c8c0b81c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/api/v3/download.getFile","headers":{"host":"ssrsub.v03.ssrsub.com"}}}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"mrb2.shabijichang.com","port":80,"cipher":"auto","uuid":"53701585-591f-48a3-9515-8831ed0524ac","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"mrb2.shabijichang.com"}}}
+  - {"name":"🇨🇳_CN_中国->🇺🇸_US_美国_2","type":"vmess","server":"mf33fx.micloud.buzz","port":46033,"cipher":"auto","uuid":"a824a85c-4bb0-4ab3-9d8a-bf9b02d9b20c","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/zh-cn","headers":{"host":"mf33fx.micloud.buzz"}}}
+  - {"name":"🇺🇸_US_美国->🇨🇱_CL_智利","type":"vmess","server":"sdyg2.shabijichang.com","port":80,"cipher":"auto","uuid":"53701585-591f-48a3-9515-8831ed0524ac","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"sdyg2.shabijichang.com"}}}
+  - {"name":"🇨🇳_CN_中国_2","type":"ss","server":"as.al19.cf","port":26007,"password":"977a1372-18fe-4bae-8616-9a59497b810a","cipher":"chacha20-ietf-poly1305"}
   - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国","type":"vmess","server":"yd1.992688.xyz","port":8880,"cipher":"auto","uuid":"2fc248d5-7c81-471d-c2cf-a14e7f5aed2d","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"host":"vceu3.vpn66.eu.org"}}}
-  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"5.161.191.55","port":2083,"cipher":"auto","uuid":"90e968f5-58a5-42ce-a2de-c81894054563","alterId":0,"tls":false,"skip-cert-verify":true,"network":"http"}
-  - {"name":"🇺🇸_US_美国_6","type":"vless","server":"104.24.176.7","port":443,"uuid":"884f9b2c-f0c5-44dd-a68e-3e39ce93bb39","tls":true,"servername":"cf-wkrs-pages-vless-aoy.pages.dev","network":"ws","ws-opts":{"path":"/@v2ray_god = چنل تلگرام🇮🇷@v2ray_god = چنل تلگرام🇮🇷"}}
+  - {"name":"🇨🇳_CN_中国->🇺🇸_US_美国_3","type":"ss","server":"gz-zz-xx.newbluecloud.top","port":25305,"password":"977a1372-18fe-4bae-8616-9a59497b810a","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"🇺🇸_US_美国->🇳🇱_NL_荷兰","type":"vmess","server":"104.17.88.252","port":2082,"cipher":"auto","uuid":"6388bd92-6cbc-4b72-a9a6-931f071d0ffa","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/phosphorylative.aurorainiceland.com/nimvws","headers":{"host":"erfannewfreenodes.vdmmswyzmzigonvnjk443.workers.dev"}}}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
+      - 🇨🇳_CN_中国_1
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
       - 🇺🇸_US_美国_1
-      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_2
-      - 🇺🇸_US_美国_3
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
-      - 🇺🇸_US_美国_4
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇨🇱_CL_智利
+      - 🇨🇳_CN_中国_2
       - 🇺🇸_US_美国->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
+      - 🇨🇳_CN_中国_1
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
       - 🇺🇸_US_美国_1
-      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_2
-      - 🇺🇸_US_美国_3
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
-      - 🇺🇸_US_美国_4
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇨🇱_CL_智利
+      - 🇨🇳_CN_中国_2
       - 🇺🇸_US_美国->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳_CN_中国_1
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
       - 🇺🇸_US_美国_1
-      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_2
-      - 🇺🇸_US_美国_3
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
-      - 🇺🇸_US_美国_4
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇨🇱_CL_智利
+      - 🇨🇳_CN_中国_2
       - 🇺🇸_US_美国->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - 🇨🇳_CN_中国_1
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
       - 🇺🇸_US_美国_1
-      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_2
-      - 🇺🇸_US_美国_3
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
-      - 🇺🇸_US_美国_4
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇨🇱_CL_智利
+      - 🇨🇳_CN_中国_2
       - 🇺🇸_US_美国->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
+      - 🇨🇳_CN_中国_1
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
       - 🇺🇸_US_美国_1
-      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_2
-      - 🇺🇸_US_美国_3
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
-      - 🇺🇸_US_美国_4
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇨🇱_CL_智利
+      - 🇨🇳_CN_中国_2
       - 🇺🇸_US_美国->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
+      - 🇨🇳_CN_中国_1
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
       - 🇺🇸_US_美国_1
-      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_2
-      - 🇺🇸_US_美国_3
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
-      - 🇺🇸_US_美国_4
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇨🇱_CL_智利
+      - 🇨🇳_CN_中国_2
       - 🇺🇸_US_美国->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -211,16 +210,16 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳_CN_中国_1
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_1
       - 🇺🇸_US_美国_1
-      - 🇳🇱_NL_荷兰->🇫🇷_FR_法国
-      - 🇩🇪_DE_德国
       - 🇺🇸_US_美国_2
-      - 🇺🇸_US_美国_3
-      - 🇳🇱_NL_荷兰->🇬🇧_GB_英国
-      - 🇺🇸_US_美国_4
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_2
+      - 🇺🇸_US_美国->🇨🇱_CL_智利
+      - 🇨🇳_CN_中国_2
       - 🇺🇸_US_美国->🇩🇪_DE_德国
-      - 🇺🇸_US_美国_5
-      - 🇺🇸_US_美国_6
+      - 🇨🇳_CN_中国->🇺🇸_US_美国_3
+      - 🇺🇸_US_美国->🇳🇱_NL_荷兰
 
 rules:
 # 本地/局域网地址
